tket/src/resource/scope/snapshots/tket__resource__scope__patch__tests__rewrite_to_4cx.snap
---
source: tket/src/resource/scope/patch.rs
expression: circuit_units
---
[
    (
        Node(
            4,
        ),
        NodeCircuitUnits {
            port_map: PortMap {
                vec: [
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                ],
                num_inputs: 1,
            },
            position: Position(0),
        },
    ),
    (
        Node(
            7,
        ),
        NodeCircuitUnits {
            port_map: PortMap {
                vec: [
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                ],
                num_inputs: 1,
            },
            position: Position(3),
        },
    ),
    (
        Node(
            11,
        ),
        NodeCircuitUnits {
            port_map: PortMap {
                vec: [
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                ],
                num_inputs: 2,
            },
            position: Position(3/5),
        },
    ),
    (
        Node(
            12,
        ),
        NodeCircuitUnits {
            port_map: PortMap {
                vec: [
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                ],
                num_inputs: 2,
            },
            position: Position(6/5),
        },
    ),
    (
        Node(
            13,
        ),
        NodeCircuitUnits {
            port_map: PortMap {
                vec: [
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                ],
                num_inputs: 2,
            },
            position: Position(9/5),
        },
    ),
    (
        Node(
            14,
        ),
        NodeCircuitUnits {
            port_map: PortMap {
                vec: [
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            0,
                        ),
                    ),
                    Resource(
                        ResourceId(
                            1,
                        ),
                    ),
                ],
                num_inputs: 2,
            },
            position: Position(12/5),
        },
    ),
]
